# driver-oak_ffc_4p_ros

./: CMakeLists.txt  Makefile  Readme.md  dockerfile  environment.yml  oak_ffc_4p.cpp  oak_ffc_4p.h  oak_ffc_4p_node.cpp  package.xml  start_docker.sh  test.cpp  test.py
docker/: Dockerfile  Makefile  dockerfile
launch/: OV9782.launch
scripts/: init_ws.sh
tools/: rectify_fisheye_camera.py
